--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-terser": "^2.1.0",
     "postcss": "^8.4.38",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "@11ty/eleventy-plugin-rss": "^1.2.0"
   }
 }
