--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "-----build": "gulp && npx @11ty/eleventy",
     "build": "npx @11ty/eleventy",
-    "dev": "gulp --watch & npx @11ty/eleventy --serve",
+    "dev": "gulp watch & npx @11ty/eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
